# glr

./: .gitignore  Cargo.toml  README.md  build.py  build.rs
glr/: Cargo.toml
glr/src/: main.rs  panic.rs
glr/src/bytecode/: class_file.rs  class_load.rs  class_map.rs  const_pool.rs  interpreter.rs  loader.rs  mapping.rs  mod.rs  opcodes.rs  reader.rs
glr/src/os/: file.rs  info.rs  io.rs  mem.rs  mod.rs  page.rs  pool.rs  sync.rs  thread.rs
glr/src/shared/: ffi.rs  mem.rs  mod.rs  print.rs  sync.rs  types.rs
glr/src/vm/: mod.rs
glr/src/vm/class_file/: class_file.rs  class_loader.rs  mod.rs
glras/: Cargo.toml
glrc/: Cargo.toml
glrc/src/: main.rs
glrc/src/parser/: class_file.rs  expression.rs  lexer.rs  mod.rs  token.rs  typing.rs
glrspec/: Cargo.toml
src/: glr.h  main.c  main.rs
src/compiler/: mod.rs
src/compiler/parser/: ast.rs  grammar.rustpeg  mod.rs
src/os/: atomic.h  handle.h  hash.c  hash.h  info.c  info.h  offsets.h  page.c  page.h  sys.h  thread.h
src/vm/: classfile.h  classloader.h  opcodes.h  vm.c  vm.h
src/vm/class_file/: class_file.h  class_load.c  class_lookup.c  const_pool.c  const_pool.h
src/vm/classfile/: classfile.h  constpool.c  constpool.h  loader.c
