[package]
name = "glr"
edition = "2018"
version = "0.1.0"
authors = ["king1600"]

[features]
default = []
debug = []

[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]

[dependencies.libc]
default-features = false
git = "https://github.com/rust-lang/libc"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "winnt",
    "winbase",
    "fileapi",
    "synchapi",
    "debugapi",
    "memoryapi",
    "handleapi",
    "sysinfoapi",
    "processthreadsapi",
]
